--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         */
     </style>
 
-    <script id="sap-ui-bootstrap" src="https://sapopenui5.hana.ondemand.com/resources/sap-ui-core.js"
+    <script id="sap-ui-bootstrap" src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
         data-sap-ui-theme="sap_fiori_3" data-sap-ui-resourceroots='{
             "ui5qrcoderendering": "./"
         }' data-sap-ui-oninit="module:sap/ui/core/ComponentSupport" data-sap-ui-compatVersion="edge"
